--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <header class="header">
         <div class="container">
           <div class="logo">
-            <a href="/">.MIWEB</a>
+            <a class="logo__nombre" href="/">.MIWEB</a>
           </div>
           <div class="navegacion">
             <nav class="nav">
@@ -57,7 +57,7 @@
           </div>
           <!-- fin de navegacion -->
           <div class="busqueda-form">
-            <input type="search" placeholder="Presionar Enter" />
+            <input type="search" placeholder="Escribir su busqueda" />
             <input type="submit" hidden />
           </div>
           <!-- fin de busqueda-form -->
@@ -65,6 +65,6 @@
         <!-- fin de container -->
       </header>
     </div>
-    <script src="script.js" type="module"></script>
+    <script src="js/script.js" type="module"></script>
   </body>
 </html>
