--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
                 <i class="fa-solid fa-bars"></i>
               </button>
             </div>
+            <!-- fin de botones -->
           </div>
           <!-- fin de navegacion -->
           <div class="busqueda-form">
@@ -65,6 +66,6 @@
         <!-- fin de container -->
       </header>
     </div>
-    <script src="js/script.js" type="module"></script>
+    <script src="js/script.js"></script>
   </body>
 </html>
