Agregando estilos de color

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <header class="header">
         <div class="container">
           <div class="logo">
-            <a class="logo__nombre" href="/">.MIWEB</a>
+            <a class="logo__nombre" href="/">.MILOGO</a>
           </div>
           <div class="navegacion">
             <nav class="nav">
